--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="container">
+      <h2>Password Strength Check</h2>
+      <div class="input-box">
+        <input type="password" placeholder="password" id="myPassword" />
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
