--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="input-box">
         <input type="password" placeholder="password" id="myPassword" />
       </div>
+      <div class="strengtmeter"></div>
     </div>
     <script src="app.js"></script>
   </body>
