--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h2>Password Strength Check</h2>
       <div class="input-box">
         <input type="password" placeholder="password" id="myPassword" />
+        <div class="show"></div>
       </div>
       <div class="strengtmeter"></div>
     </div>
